--- a/anchor-AMM/anchor/tsconfig.json
+++ b/anchor-AMM/anchor/tsconfig.json
@@ -1,10 +1,24 @@
 {
   "compilerOptions": {
-    "types": ["mocha", "chai"],
+    "types": ["node", "mocha", "chai"],
     "typeRoots": ["./node_modules/@types"],
     "lib": ["es2015"],
     "module": "commonjs",
     "target": "es6",
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "outDir": "./dist",
+    "declaration": true,
+    "sourceMap": true
+  },
+  "include": [
+    "./**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
